fix(job list): fix button being partially cut off on smaller devices (iphone 4)

--- a/ProjectDONE/App/styles/app.css
+++ b/ProjectDONE/App/styles/app.css
@@ -14,13 +14,16 @@
         margin-left: 5%;
         width: 90%;
         text-align: center;
-        height: 7vh;
         padding-top: 12px;
-        bottom: 0px;
+        margin-bottom: 2%;
     }
 
     .dashboard .jobs {
         height: 83vh;
+    }
+
+    .dashboard .jobs ons-list {
+        padding-bottom: 100px;
     }
 
     .dashboard .bottom-bar {
@@ -29,8 +32,11 @@
     }
 
     .dashboard .bottom {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
         background-color: lightgray !important;
-        height: 100%;
     }
 
     .dashboard .job {
